# django-project-template

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  pyproject.toml
app/myproject/: settings.py  urls.py
app/tests/: test_django_template.py
config/: .env.template
nginx/: nginx.conf
