[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Sam Kiptoo <samwelkanda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.11"
psycopg2-binary = "2.8.5"
gunicorn = "20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
